--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
   "dependencies": {
-    "socks-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.0",
     "telegraf": "^4.3.0"
-  }
+  },
+  "name": "sydown",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kalavt/sydown.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kalavt/sydown/issues"
+  },
+  "homepage": "https://github.com/kalavt/sydown#readme",
+  "description": ""
 }
