--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "envFile": "${workspaceFolder}/.env",
-      "program": "app.js"
+      "program": "${file}"
     }
   ]
 }
